<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mahesh.hp.confab.LoginActivity"
    >


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_your_email_address"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/enter_your_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="43dp"
        android:text="@string/login" />
</RelativeLayout>
